data/derived/fa15/progs/unify/prog2916.ml.out
Characters 49-73:
  sumList (digitsOfInt(n));;
  ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         unit
